--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Головна</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    
+    <form class="login">
+        <input type="text" placeholder="UserName">
+        <input type="password" placeholder="Passworld">
+        <button>Login</button>
+    </form>
+
     <script src="code.js"></script>
 </body>
 </html>
