--- a/login.html
+++ b/login.html
@@ -13,7 +13,8 @@
     <form class="login">
         <input type="text" placeholder="UserName">
         <input type="password" placeholder="Passworld">
-        <button>Login</button>
+        <button type="submit" formaction="login.html">Login</button>
+        <button type="submit" formaction="register.html">registration</button>
     </form>
 
     <script src="code.js"></script>
