підключив css i js

--- a/html/Login and register/login.html
+++ b/html/Login and register/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Головна</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style_log and reg/style.css">
 </head>
 <body>
     
@@ -17,6 +17,6 @@
         <button type="submit" formaction="register.html">registration</button>
     </form>
 
-    <script src="code.js"></script>
+    <script src="/js/code.js"></script>
 </body>
 </html>
