--- a/html/Login and register/register.html
+++ b/html/Login and register/register.html
@@ -7,10 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <title>Головна</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style_log and reg/style.css">
 </head>
 <body>
-    <script src="code.js"></script>
+    <script src="/js/code.js"></script>
     
     <form class="login ,password">
         <input type="text" placeholder="UserName">
