Додав переключення теми сайта

--- a/html/header/header.html
+++ b/html/header/header.html
@@ -37,11 +37,11 @@
             <div
               class="navigation_theme"
               data-color="#1f2e35"
-              onclick="changeColor('dark_mode')"
+              onclick="toggleTheme()"
             ></div>
             <label class="switch">
               <input type="checkbox" />
-              <span class="slider round"></span>
+              <span class="slider round" onclick="toggleTheme()"></span>
             </label>
           </div>
           <div class="navigation_burger">
