трішки змінив header

--- a/html/header/header.html
+++ b/html/header/header.html
@@ -34,11 +34,7 @@
               </ul>
             </ul>
 
-            <div
-              class="navigation_theme"
-              data-color="#1f2e35"
-              onclick="toggleTheme()"
-            ></div>
+            <div class="navigation_theme" onclick="toggleTheme()"></div>
             <label class="switch">
               <input type="checkbox" />
               <span class="slider round" onclick="toggleTheme()"></span>
