--- a/html/footer/footer.html
+++ b/html/footer/footer.html
@@ -25,9 +25,11 @@
             <ul>
                 <li> <img id="Logo" src="/img/Logo.png" alt="logo" />
                     <span class="Logo_text">Product</span></li>
-                <li class="social"><img src="/img/instagram.png"> 
-                    <img src="/img/Twitter.png">
-                    <img src="/img/facebook.png"></li>
+                <li class="social">
+                    <a href="#"><img src="/img/instagram.png"> </a>
+                    <a href="#"><img src="/img/facebook.png"><a>  
+                    <a href="#"><img src="/img/Twitter.png"> </a>
+                </li>
                    
             </ul>
            
